# hydra-hs

./: .gitignore  LICENSE  README.md  copyToMSYS2.sh  copyToMac.sh  hydra-hs.cabal  stack.yaml
System/Hardware/: Hydra.hsc
src/System/Hardware/: Hydra.hs  Hydra.hsc
src/System/Hardware/Hydra/: Raw.hsc
test/: HydraGL.hs  Main.hs  test.c
