name:                hydra-hs
version:             1.0.0.2
synopsis:            Haskell binding to the Sixense SDK for the Razer Hydra
description:         Bindings to the Sixense SDK for the Razer Hydra.
                     To get started, get the SDK from Sixense (http://sixense.com/developers), install it, then install hydra.hs.

                     The install script that comes with the SDK might not always work.
		     To build hydra-hs, you need both sixense.h and libsixense.dylib in a location where they can be found (such as /usr/local/include and /usr/local/lib).
homepage:            https://github.com/mruegenberg/hydra-hs
license:             BSD3
license-file:        LICENSE
author:              Marcel Ruegenberg
maintainer:          github@dustlab.com
category:            Hardware
build-type:          Simple
cabal-version:       >=1.8


library
  exposed-modules:     System.Hardware.Hydra
  hs-source-dirs:      src
  build-depends:       base >=4.6
                     , linear
  include-dirs:        include
  extra-libraries:     sixense_x64
  includes:            sixense.h
  if os(windows)
    extra-lib-dirs: c:\msys64\usr\local\bin

Test-Suite hydra-test
  type:       exitcode-stdio-1.0
  main-is:    Main.hs
  hs-source-dirs:      test
  build-depends:       base >=4.6
                     , hydra-hs
