name:                hydra-hs
version:             1.1.0
synopsis:            Haskell binding to the Sixense SDK for the Razer Hydra
description:         Bindings to the Sixense SDK for the Razer Hydra.
                     Use ./copyToMac.sh or ./copyToMSYS2.sh (for MSYS2 on Windows),
                     and then cabal install should work.
                     Use the System.Hardware.Hydra rather than the Raw module as the Raw module can crash easily.
homepage:            https://github.com/lukexi/hydra-hs
license:             BSD3
license-file:        LICENSE
author:              Marcel Ruegenberg & Luke Iannini
maintainer:          github@dustlab.com or lukexi@me.com
category:            Hardware
build-type:          Simple
cabal-version:       >=1.8


library
  exposed-modules:     
    System.Hardware.Hydra
    System.Hardware.Hydra.Raw
  hs-source-dirs:      src
  build-depends:       base >=4.6
                     , linear
                     , mtl
  include-dirs:        include
  extra-libraries:     sixense_x64
  includes:            sixense.h
  ghc-prof-options:    -Wall -O2 -fprof-auto
  ghc-options:         -Wall -O2
  if os(windows)
    extra-lib-dirs: c:\msys64\usr\local\bin

test-suite hydra-test
  type:       exitcode-stdio-1.0
  main-is:    Main.hs
  hs-source-dirs:      test
  build-depends:       base >=4.6
                     , hydra-hs
  ghc-options:         -Wall -threaded

test-suite hydra-gl
  type:       exitcode-stdio-1.0
  main-is:    HydraGL.hs
  other-modules: Cube
  hs-source-dirs:      test
  build-depends:       base >=4.6
                     , hydra-hs
                     , gl-pal
                     , gl
                     , glfw-pal
                     , linear
                     , mtl
  ghc-options:         -Wall -threaded
